[package]
name = "stats-rs"
version = "0.1.0"
authors = ["AnhMV (anhmv91@gmail.com)"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.25"
wasm-bindgen = "0.2.48"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'Element',
  'Node',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'Performance',
  'CssStyleDeclaration',
  'HtmlDivElement'
]