[package]
name = "stats-rs"
description = "Stats is a webassembly version written in Rust."
repository = "https://github.com/anhmv/stats.rs"
authors = ["AnhMV (anhmv91@gmail.com)"]
version = "0.1.3"
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.25"
wasm-bindgen = "0.2.48"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'Element',
  'Node',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Performance',
]
